--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ Flask-Bcrypt==0.6.0
 Flask-Login==0.2.11
 PyYAML==3.11
 Flask-WTF==0.10.3
-SQLAlchemy==1.0.0
+SQLAlchemy==1.0.15
 SQLAlchemy-Utils==0.29.9
 WTForms-Components==0.9.9
 WTForms-Alchemy==0.13.0
@@ -33,3 +33,4 @@ mock==2.0.0
 six==1.10.0
 terminaltables==2.1.0
 selenium==2.53.6
+alembic=0.8.8
